--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ body {
   font-family: helvetica, arial, sans;
 }
 .content-container {
-  flex-grow: 1;
+  flex: 1 1 auto;
   padding-top: 10vh;
   width: 100%;
 }
@@ -243,14 +243,13 @@ h2 ~ p {
   margin-top: 1em;
 }
 .callout-title {
-  flex-grow: 1;
-  flex-basis: 0;
+  flex: 1 1 0;
   font-size: 5.75vw;
   text-align: right;
   text-transform: uppercase;
 }
 .callout-copy {
-  flex-shrink: 0;
-  flex-basis: 45em;
+  flex: 0 0 45em;
   font-size: 0.8rem;
+  padding: 0 3vw;
 }
