--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@ body {
   font-family: helvetica, arial, sans;
 }
 .content-container {
+  display: flex;
   flex: 1 1 auto;
   padding-top: 10vh;
   width: 100%;
@@ -156,7 +157,6 @@ h2 ~ p {
   color: #fff;
 }
 
-
 /* SOCIAL STYLES */
 .social-list {
   list-style: none;
@@ -252,4 +252,28 @@ h2 ~ p {
   flex: 0 0 45em;
   font-size: 0.8rem;
   padding: 0 3vw;
+}
+
+/* COLUMN STYLES */
+.col-three {
+  display: flex;
+  flex: 1;
+}
+
+.col {
+  box-sizing: border-box;
+  padding: 2em;
+}
+.col-three .col ~ .col {
+  border-left: 1px solid rgba(0, 0, 0, 0.1);
+  flex: 1;
+}
+.col-three .col-nav {
+  flex: 0 1 15em;
+}
+.col-three .col-content {
+  flex: 1;
+}
+.col-three .col-aside {
+  flex: 0 1 20em
 }
