Finishing mobile prototype

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@ layout: default
           <span> - {{ page.date | date: '%B %d, %Y' }}</span>
         </div>
     </header>
-    <aside class="post-aside">
+    <aside class="post-aside blog-recent">
       {% include recent-posts.html %}
     </aside>
     <div class="post-content">
