--- a/css/main.css
+++ b/css/main.css
@@ -109,6 +109,12 @@ h1,h2,h3,h4,h5,h6 {
   text-transform: uppercase;
 }
 
+/* MOBILE MENU */
+.mobile-menu-check,
+.show-mobile-menu {
+  display: none;
+}
+
 /* FOOTER STYLES */
 .footer {
   background-color: #000;
