--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,21 +1,28 @@
-  <head>
-    {% if page.title %}
-    <title>{{ page.title }} | Test Page</title>
-    {% else %}
-    <title>Test Page: Don't Panic</title>
-    {% endif %}
-    {% if page.description %}
-    <meta name="description" content="{{ page.description }}">
-    {% else %}
-    <meta name="description" content="This is a dangerous site.">
-    {% endif %}
-    <title>Test Page: Don't Panic</title>
-    <link href="favicon.png" rel="icon">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway:100,400" rel="stylesheet">
-    <link rel="stylesheet" href="/fonts/fontawesome-free-5.2.0-web/css/all.css">
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/main.css">
-  </head>
+<head>
+  {% if page.title %}
+  <title>{{ page.title }} | Test Page</title>
+  {% else %}
+  <title>Test Page: Don't Panic</title>
+  {% endif %}
+  {% if page.description %}
+  <meta name="description" content="{{ page.description }}">
+  {% else %}
+  <meta name="description" content="This is a dangerous site.">
+  {% endif %}
+  <title>Test Page: Don't Panic</title>
+  <link href="favicon.png" rel="icon">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway:100,400" rel="stylesheet">
+  <link rel="stylesheet" href="/fonts/fontawesome-free-5.2.0-web/css/all.css">
+  <link rel="stylesheet" href="/css/reset.css">
+  <link rel="stylesheet" href="/css/main.css">
+
+  <script src="/js/gallery.js"></script>
+  <script>
+    document.addEventListener("DOMContentLoaded", function() {
+      activateGallery();
+    });
+  </script>
+</head>
